--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,7 +13,7 @@ jobs:
     name: Windows
     runs-on: windows-2022
     env:
-      BOOST_ROOT: C:\local\boost_1_83_0
+      BOOST_ROOT: C:/local/boost_1_83_0
     steps:
       - uses: actions/checkout@master
 
