--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -107,7 +107,7 @@ jobs:
             git
             base-devel
             mingw-w64-x86_64-toolchain
-            mingw-w64-x86_64-boost
+            mingw-w64-boost
             mingw-w64-x86_64-cmake
 
       - uses: actions/checkout@master
