--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -108,6 +108,7 @@ jobs:
             base-devel
             mingw-w64-x86_64-toolchain
             mingw-w64-x86_64-boost
+            mingw-w64-x86_64-boost-libs
             mingw-w64-x86_64-cmake
 
       - uses: actions/checkout@master
