downgrade to cmake v3.10

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.10)
 
 include(CheckCXXCompilerFlag)
 set(VERSION "6.7.5")
@@ -31,7 +31,7 @@ if(MSVC OR MINGW)
   include_directories(src/Platform/Windows)
   if(POLICY CMP0167)
     cmake_policy(SET CMP0167 OLD)  # Use OLD behavior for compatibility
-endif()
+  endif()
 elseif(APPLE)
   include_directories(src/Platform/OSX)
 else()
@@ -115,7 +115,7 @@ else()
   endif()
   if(MINGW)
     set(WARNINGS "${WARNINGS} -Wno-error=unused-value")
-    set(MINGW_FLAG "-DWIN32_LEAN_AND_MEAN -DCMAKE_POLICY_DEFAULT_CMP0167=OLD")
+    set(MINGW_FLAG "-DWIN32_LEAN_AND_MEAN")
     include_directories(SYSTEM src/platform/mingw)
   else()
     set(MINGW_FLAG "")
