--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,12 +29,15 @@ endif()
 
 if(MSVC OR MINGW)
   include_directories(src/Platform/Windows)
+  if(POLICY CMP0167)
+    cmake_policy(SET CMP0167 NEW)
+  endif()
   elseif(APPLE)
-  include_directories(src/Platform/OSX)
+    include_directories(src/Platform/OSX)
 else()
-	include_directories(src/Platform/Linux)
-  include(TestCXXAcceptsFlag)
-	include(CheckCCompilerFlag)
+    include_directories(src/Platform/Linux)
+    include(TestCXXAcceptsFlag)
+    include(CheckCCompilerFlag)
   if (NOT ARCH)
     set(ARCH native CACHE STRING "CPU to build for: -march value or 'default' to not pass -march at all")
   endif()
