--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -98,19 +98,24 @@ jobs:
 
   build-mingw:
     name: MinGW
-    runs-on: windows-2022
+    runs-on: windows-latest
     steps:
-      - uses: msys2/setup-msys2@v2.26.0
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup MSYS2
+        uses: msys2/setup-msys2@v2
         with:
           update: true
           install: >-
             git
             base-devel
             mingw-w64-x86_64-toolchain
-            mingw-w64-x86_64-boost
             mingw-w64-x86_64-cmake
+            mingw-w64-x86_64-boost
 
-      - uses: actions/checkout@master
+      - name: Add MSYS2 to PATH
+        run: echo "C:\msys64\mingw64\bin" >> $GITHUB_PATH
 
       - name: Prepare version
         shell: powershell
