--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,6 +156,9 @@ include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
 
 if(MINGW)
   set(Boost_LIBRARIES "${Boost_LIBRARIES};ws2_32;mswsock;bcrypt")
+  set(Boost_ROOT "C:/msys64/mingw64")
+  set(Boost_INCLUDEDIR "${Boost_ROOT}/include")
+  set(Boost_LIBRARYDIR "${Boost_ROOT}/lib")
 elseif(APPLE)
   set(Boost_LIBRARIES "${Boost_LIBRARIES}")
 elseif(NOT MSVC)
