--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -98,10 +98,10 @@ jobs:
 
   build-mingw:
     name: MinGW
-    runs-on: windows-latest
+    runs-on:  windows-2022
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup MSYS2
         uses: msys2/setup-msys2@v2
